# school3

./: .gitignore  TEST.md  deploy_local.bat  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  main.rs  models.rs  seed.rs
backend/src/handlers/: attendance.rs  auth.rs  classrooms.rs  dashboard.rs  grades.rs  library.rs  mod.rs  students.rs  teachers.rs
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/add-book/: add-book.component.ts
frontend/src/app/components/add-classroom/: add-classroom.component.ts
frontend/src/app/components/add-student/: add-student.component.ts
frontend/src/app/components/add-teacher/: add-teacher.component.ts
frontend/src/app/components/attendance-list/: attendance-list.component.ts
frontend/src/app/components/book-list/: book-list.component.ts
frontend/src/app/components/classroom-list/: classroom-list.component.ts
frontend/src/app/components/dashboard/: dashboard.component.ts
frontend/src/app/components/footer/: footer.component.ts
frontend/src/app/helpers/: auth.guard.ts  jwt.interceptor.ts
frontend/src/app/models/: models.ts
frontend/src/app/services/: attendance.service.ts  auth.service.ts  classroom.service.ts  dashboard.service.ts  grade.service.ts  library.service.ts  student.service.ts  teacher.service.ts
(+10 files in other folders)
